[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/CutiveMono-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/Game.gd" type="Script" id=2]
[ext_resource path="res://scenes/GameMenu.gd" type="Script" id=4]
[ext_resource path="res://levels/1.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="CanvasLayer" parent="."]
layer = -10

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.129412, 0.129412, 0.129412, 1 )

[node name="World" type="Node2D" parent="."]

[node name="LevelContainer" type="Node2D" parent="World"]

[node name="Level" parent="World/LevelContainer" instance=ExtResource( 5 )]

[node name="Torpedos" type="Node2D" parent="World"]

[node name="Mines" type="Node2D" parent="World"]

[node name="Players" type="Node2D" parent="World"]

[node name="Sounds" type="Node2D" parent="World"]

[node name="Pings" type="Node2D" parent="World"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="GameStatus" type="Label" parent="CanvasLayer/GUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = -128.0
margin_bottom = -112.0
grow_horizontal = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 1 )
align = 1

[node name="Menu" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="CanvasLayer/Menu"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -300.0
margin_right = -120.0
margin_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="CanvasLayer/Menu/Buttons"]
margin_top = 272.0
margin_right = 120.0
margin_bottom = 292.0
text = "RESUME"

[node name="Quit" type="Button" parent="CanvasLayer/Menu/Buttons"]
margin_top = 308.0
margin_right = 120.0
margin_bottom = 328.0
text = "QUIT"

[node name="Controls" type="Control" parent="CanvasLayer/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Movement" type="Control" parent="CanvasLayer/Menu/Controls"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Up" type="Label" parent="CanvasLayer/Menu/Controls/Movement"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_top = -40.0
margin_right = 11.0
margin_bottom = -26.0
grow_horizontal = 2
text = "CONTROL_HINT_MOVE_UP"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Down" type="Label" parent="CanvasLayer/Menu/Controls/Movement"]
margin_left = -6.0
margin_top = 34.0
margin_right = 9.0
margin_bottom = 48.0
grow_horizontal = 2
text = "CONTROL_HINT_MOVE_DOWN"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="Label" parent="CanvasLayer/Menu/Controls/Movement"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -65.0
margin_top = 2.0
margin_right = -48.0
margin_bottom = 16.0
grow_horizontal = 2
text = "CONTROL_HINT_MOVE_LEFT"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="Label" parent="CanvasLayer/Menu/Controls/Movement"]
margin_left = 43.0
margin_top = 4.0
margin_right = 61.0
margin_bottom = 18.0
grow_horizontal = 2
text = "CONTROL_HINT_MOVE_RIGHT"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Brake" type="Label" parent="CanvasLayer/Menu/Controls"]
margin_top = 4.0
margin_right = 177.0
margin_bottom = 18.0
text = "CONTROL_HINT_BRAKE"

[node name="Ping" type="Label" parent="CanvasLayer/Menu/Controls"]
margin_top = 22.0
margin_right = 177.0
margin_bottom = 36.0
text = "CONTROL_HINT_PING"

[node name="SilentRunning" type="Label" parent="CanvasLayer/Menu/Controls"]
margin_top = 40.0
margin_right = 177.0
margin_bottom = 54.0
text = "CONTROL_HINT_SILENCE"

[node name="Torpedo" type="Label" parent="CanvasLayer/Menu/Controls"]
margin_left = 37.0
margin_top = 536.0
margin_right = 84.0
margin_bottom = 550.0
text = "CONTROL_HINT_TORPEDO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mine" type="Label" parent="CanvasLayer/Menu/Controls"]
margin_left = 505.0
margin_top = 508.0
margin_right = 520.0
margin_bottom = 522.0
grow_horizontal = 2
text = "CONTROL_HINT_MINE"

[node name="MineNext" type="Label" parent="CanvasLayer/Menu/Controls"]
margin_left = 598.0
margin_top = 512.0
margin_right = 614.0
margin_bottom = 94.0
grow_horizontal = 2
text = "CONTROL_HINT_MINE_NEXT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinePrev" type="Label" parent="CanvasLayer/Menu/Controls"]
margin_left = 410.0
margin_top = 512.0
margin_right = 426.0
margin_bottom = 94.0
grow_horizontal = 2
text = "CONTROL_HINT_MINE_PREV"

[node name="Settings" type="VBoxContainer" parent="CanvasLayer/Menu"]
anchor_left = 1.0
anchor_right = 1.0
margin_top = 60.0
margin_right = -60.0
grow_horizontal = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterVolume" type="HBoxContainer" parent="CanvasLayer/Menu/Settings"]
margin_right = 235.0
margin_bottom = 16.0
grow_horizontal = 2
alignment = 2

[node name="Label" type="Label" parent="CanvasLayer/Menu/Settings/MasterVolume"]
margin_top = 1.0
margin_right = 111.0
margin_bottom = 15.0
text = "MASTER_VOLUME"
align = 2

[node name="Slider" type="HSlider" parent="CanvasLayer/Menu/Settings/MasterVolume"]
margin_left = 115.0
margin_right = 235.0
margin_bottom = 16.0
rect_min_size = Vector2( 120, 0 )
value = 100.0

[node name="SoundVolume" type="HBoxContainer" parent="CanvasLayer/Menu/Settings"]
margin_top = 20.0
margin_right = 235.0
margin_bottom = 36.0
grow_horizontal = 2
alignment = 2

[node name="Label" type="Label" parent="CanvasLayer/Menu/Settings/SoundVolume"]
margin_left = 2.0
margin_top = 1.0
margin_right = 111.0
margin_bottom = 15.0
text = "SOUND_VOLUME"
align = 2

[node name="Slider" type="HSlider" parent="CanvasLayer/Menu/Settings/SoundVolume"]
margin_left = 115.0
margin_right = 235.0
margin_bottom = 16.0
rect_min_size = Vector2( 120, 0 )
value = 100.0

[node name="MusicVolume" type="HBoxContainer" parent="CanvasLayer/Menu/Settings"]
margin_top = 40.0
margin_right = 235.0
margin_bottom = 56.0
grow_horizontal = 2
alignment = 2

[node name="Label" type="Label" parent="CanvasLayer/Menu/Settings/MusicVolume"]
margin_left = 8.0
margin_top = 1.0
margin_right = 111.0
margin_bottom = 15.0
text = "MUSIC_VOLUME"
align = 2

[node name="Slider" type="HSlider" parent="CanvasLayer/Menu/Settings/MusicVolume"]
margin_left = 115.0
margin_right = 235.0
margin_bottom = 16.0
rect_min_size = Vector2( 120, 0 )
value = 100.0

[node name="Options" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Chat" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="MusicTimer" type="Timer" parent="."]

[connection signal="pressed" from="CanvasLayer/Menu/Buttons/Resume" to="CanvasLayer/Menu" method="_on_Resume"]
[connection signal="pressed" from="CanvasLayer/Menu/Buttons/Quit" to="CanvasLayer/Menu" method="_on_Quit"]
[connection signal="value_changed" from="CanvasLayer/Menu/Settings/MasterVolume/Slider" to="CanvasLayer/Menu" method="_on_MasterVolume_changed"]
[connection signal="value_changed" from="CanvasLayer/Menu/Settings/SoundVolume/Slider" to="CanvasLayer/Menu" method="_on_SoundVolume_changed"]
[connection signal="value_changed" from="CanvasLayer/Menu/Settings/MusicVolume/Slider" to="CanvasLayer/Menu" method="_on_MusicVolume_changed"]
